--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ old bits/
 
 PWE sols/
 
-old tests/
+src/MEXcompilation/old_tests/
 
 analExtension/
 
@@ -18,6 +18,8 @@ paper/
 Icon?
 
 Paper/
+
+
 
 private_tests/
 
@@ -34,5 +36,7 @@ log/
 *.asv
 
 *.mat
+
+*.mex*
 
 myMex/old_tests/
