removed redundanct code
Former-commit-id: 9d21dfbb6d07b5194397777c6f8bacba40c98821

--- a/src/MEXcompilation/.vscode/settings.json
+++ b/src/MEXcompilation/.vscode/settings.json
@@ -17,6 +17,7 @@
         "cmath": "c",
         "numbers": "c",
         "interface.h": "c",
-        "get_r.h": "c"
+        "get_r.h": "c",
+        "lapacke.h": "c"
     }
 }
