a couple of further changes to index page

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-documentation/
+docs/
 
 images/
 
@@ -61,3 +61,48 @@ examples/.ipynb_checkpoints/
 
 documents/joss_paper/letter.txt
 
+# === MATLAB ===
+*.asv
+*.m~
+*.mlx~
+*.mat
+*.p
+*.mex*
+*.log
+*.out
+*.autosave
+.DS_Store
+*.fig
+*.bak
+*.tmp
+*.user.mat
+
+# MATLAB Code Generation and Simulink Coder artifacts
+codegen/
+slprj/
+sfun.mexa64
+*_mex.*
+
+# === Python / Sphinx ===
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+*.eggs/
+.build/
+_build/
+dist/
+*.log
+.env/
+.venv/
+env/
+venv/
+.mypy_cache/
+.tox/
+.cache/
+
+# === Documentation Output ===
+docs/_build/
+docs/_autosummary/
+docs/_static/generated/
