--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,8 @@ name: deploy-book
 # Run this when the master or main branch changes
 on:
   push:
+    branches:
+      - '**'
     paths:
     - docs/guide/**
 
