trying by removing the 'paths' bit

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,8 +5,8 @@ on:
   push:
     branches:
       - '**'
-    paths:
-    - docs/guide/**
+    # paths:
+    # - docs/guide/**
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
