--- a/docs/guide/api/matlab/files.yaml
+++ b/docs/guide/api/matlab/files.yaml
@@ -1,8 +1,5 @@
 files:
-  - bisection.md
-  - checkEndpointWidth.md
-  - deleteRedundantExits.md
-  - getBallDeets.md
-  - getExteriorBalls.md
-  - getSmallestSupsetBall.md
-  - inAball.md
+  - Ball.md
+  - boundaryTrace.md
+  - isIn.md
+  - plot.md
