--- a/docs/guide/api/matlab/files.yaml
+++ b/docs/guide/api/matlab/files.yaml
@@ -1,5 +1,7 @@
 files:
-  - Ball.md
-  - boundaryTrace.md
-  - isIn.md
-  - plot.md
+  - beyondNoReturn.md
+  - getContours.md
+  - JordanRotate.md
+  - sdPathODEeulerExtendCoarsePath.md
+  - sdPathODEeuler.md
+  - sdQuadODEeulerCorrection.md
