Added docs about ContourSD

--- a/docs/guide/_toc.yml
+++ b/docs/guide/_toc.yml
@@ -36,6 +36,9 @@ chapters:
   - file: api/matlab/sdPathODEeulerExtendCoarsePath.md
   - file: api/matlab/sdPathODEeuler.md
   - file: api/matlab/sdQuadODEeulerCorrection.md
+  - file: ContourSD.md
+  - file: getQuad.md
+  - file: plot.md
 
 - file: contributing
 - file: bib
