--- a/docs/guide/api/matlab/files.yaml
+++ b/docs/guide/api/matlab/files.yaml
@@ -1,7 +1,4 @@
 files:
-  - beyondNoReturn.md
-  - getContours.md
-  - JordanRotate.md
-  - sdPathODEeulerExtendCoarsePath.md
-  - sdPathODEeuler.md
-  - sdQuadODEeulerCorrection.md
+  - ContourSD.md
+  - getQuad.md
+  - plot.md
