--- a/docs/guide/api/matlab/files.yaml
+++ b/docs/guide/api/matlab/files.yaml
@@ -1,4 +1,14 @@
 files:
-  - ContourSD.md
-  - getQuad.md
-  - plot.md
+  - computeGauss.md
+  - fliterPaths.md
+  - gausLagHC.md
+  - gausLegHC.md
+  - gauss.md
+  - gaussQuadComplex.md
+  - hardCodeQuadratureGaulag.md
+  - hardCodeQuadratureGauleg.md
+  - linearPhaseNSD.md
+  - makeQuad.md
+  - quadGaussLaguerre.md
+  - rJacobi.md
+  - rLaguerre.md
