Added remaining documentation

--- a/docs/guide/api/matlab/files.yaml
+++ b/docs/guide/api/matlab/files.yaml
@@ -4,3 +4,8 @@ files:
   - getRStar.md
   - getSteepestExitsOnBall.md
   - planBisection.md
+  - shortestInfinitePath.md
+  - PathFinder.md
+  - PathFinderQuad.md
+  - compileAll.md
+  - addPaths.md
