added missing files to toctree

--- a/docs/guide/_toc.yml
+++ b/docs/guide/_toc.yml
@@ -20,6 +20,10 @@ chapters:
   - file: theory/rootfinding
 - file: api/index
   sections:
+  - file: api/matlab/PathFinder.md
+  - file: api/matlab/PathFinderQuad.md
+  - file: api/matlab/addPaths.md
+  - file: api/matlab/compileAll.md
   - file: api/matlab/bisection.md
   - file: api/matlab/checkEndpointWidth.md
   - file: api/matlab/deleteRedundantExits.md
@@ -28,8 +32,6 @@ chapters:
   - file: api/matlab/getSmallestSupsetBall.md
   - file: api/matlab/inAball.md
   - file: api/matlab/Ball.md
-  - file: api/matlab/boundaryTrace.md
-  - file: api/matlab/isIn.md
   - file: api/matlab/beyondNoReturn.md
   - file: api/matlab/getContours.md
   - file: api/matlab/JordanRotate.md
@@ -37,39 +39,40 @@ chapters:
   - file: api/matlab/sdPathODEeuler.md
   - file: api/matlab/sdQuadODEeulerCorrection.md
   - file: api/matlab/ContourSD.md
-  - file: api/matlab/getQuad.md
-  - file: computeGauss.md
-  - file: fliterPaths.md
-  - file: gausLagHC.md
-  - file: gausLegHC.md
-  - file: gauss.md
-  - file: gaussQuadComplex.md
-  - file: hardCodeQuadratureGaulag.md
-  - file: hardCodeQuadratureGauleg.md
-  - file: linearPhaseNSD.md
-  - file: makeQuad.md
-  - file: quadGaussLaguerre.md
-  - file: rJacobi.md
-  - file: rLaguerre.md
-  - file: initLog.md
-  - file: logContourDetails.md
-  - file: logMexUsage.md
-  - file: logQuadratureDetails.md
-  - file: switchWindowsCompiler.md
-  - file: checkForPackage.md
-  - file: checkInputs.md
-  - file: getHandlesFromCoeffs.md
-  - file: optionalExtras.md
-  - file: usingOctave.md
-  - file: fillCircle.md
-  - file: plotAll.md
-  - file: plotGraph.md
-  - file: plotMain.md
-  - file: getInfoFromPhase.md
-  - file: getRGivenTheta.md
-  - file: getRStar.md
-  - file: getSteepestExitsOnBall.md
-  - file: planBisection.md
+  - file: api/matlab/computeGauss.md
+  - file: api/matlab/fliterPaths.md
+  - file: api/matlab/gausLagHC.md
+  - file: api/matlab/gausLegHC.md
+  - file: api/matlab/gauss.md
+  - file: api/matlab/gaussQuadComplex.md
+  - file: api/matlab/hardCodeQuadratureGaulag.md
+  - file: api/matlab/hardCodeQuadratureGauleg.md
+  - file: api/matlab/linearPhaseNSD.md
+  - file: api/matlab/makeQuad.md
+  - file: api/matlab/quadGaussLaguerre.md
+  - file: api/matlab/rJacobi.md
+  - file: api/matlab/rLaguerre.md
+  - file: api/matlab/initLog.md
+  - file: api/matlab/logContourDetails.md
+  - file: api/matlab/logMexUsage.md
+  - file: api/matlab/logQuadratureDetails.md
+  - file: api/matlab/switchWindowsCompiler.md
+  - file: api/matlab/checkForPackage.md
+  - file: api/matlab/checkInputs.md
+  - file: api/matlab/getHandlesFromCoeffs.md
+  - file: api/matlab/optionalExtras.md
+  - file: api/matlab/usingOctave.md
+  - file: api/matlab/fillCircle.md
+  - file: api/matlab/plotAll.md
+  - file: api/matlab/plotGraph.md
+  - file: api/matlab/plotMain.md
+  - file: api/matlab/getInfoFromPhase.md
+  - file: api/matlab/getRGivenTheta.md
+  - file: api/matlab/getRStar.md
+  - file: api/matlab/getSteepestExitsOnBall.md
+  - file: api/matlab/planBisection.md
+  - file: api/matlab/shortestInfinitePath.md
+  - file: api/matlab/Dijkstra.md
 
 - file: contributing
 - file: bib
